--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Asincronismo con JavaScript",
   "main": "index.js",
   "scripts": {
-    "callback": "node callback/index.js"
+    "callback": "node callback/index.js",
+    "callback:challenge": "node callback/challenge.js"
   },
   "keywords": [
     "callback",
