clase 8 - resolver reto con promesas

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "callback": "node callback/index.js",
     "callback:challenge": "node callback/challenge.js",
-    "promise": "node promise/index.js"
+    "promise": "node promise/index.js",
+    "promise:challenge": "node promise/challenge.js"
   },
   "keywords": [
     "callback",
