--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "callback": "node callback/index.js",
     "callback:challenge": "node callback/challenge.js",
     "promise": "node promise/index.js",
-    "promise:challenge": "node promise/challenge.js"
+    "promise:challenge": "node promise/challenge.js",
+    "async": "node async/index.js"
   },
   "keywords": [
     "callback",
