--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "callback:challenge": "node callback/challenge.js",
     "promise": "node promise/index.js",
     "promise:challenge": "node promise/challenge.js",
-    "async": "node async/index.js"
+    "async": "node async/index.js",
+    "async:challenge": "node async/challenge.js"
   },
   "keywords": [
     "callback",
